--- a/app/src/main/res/layout/activity_reproductor.xml
+++ b/app/src/main/res/layout/activity_reproductor.xml
@@ -58,7 +58,7 @@
         app:layout_constraintTop_toBottomOf="@+id/tvName" />
 
     <SeekBar
-        android:id="@+id/seekBar3"
+        android:id="@+id/seekBarPos"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="56dp"
@@ -81,7 +81,7 @@
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/seekBar3" />
+        app:layout_constraintTop_toBottomOf="@+id/seekBarPos" />
 
     <TextView
         android:id="@+id/txtViewTiempoFin"
@@ -95,15 +95,28 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/seekBar3" />
+        app:layout_constraintTop_toBottomOf="@+id/seekBarPos" />
+
+    <ImageView
+        android:id="@+id/imgViewPausa"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_marginTop="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtViewTiempoInicio"
+        android:alpha="0"
+        android:onClick=""
+        app:srcCompat="@drawable/btnpausa" />
 
     <ImageView
         android:id="@+id/imgViewPlay"
         android:layout_width="80dp"
         android:layout_height="80dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="20dp"
         android:onClick="dale"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtViewTiempoInicio"
         app:srcCompat="@drawable/btnplay" />
@@ -114,6 +127,7 @@
         android:layout_height="65dp"
         android:layout_marginStart="64dp"
         android:layout_marginTop="24dp"
+        android:onClick="anterior"
         app:layout_constraintEnd_toStartOf="@+id/imgViewPlay"
         app:layout_constraintHorizontal_bias="0.554"
         app:layout_constraintStart_toStartOf="parent"
@@ -121,7 +135,7 @@
         app:srcCompat="@drawable/btnatras" />
 
     <ImageView
-        android:id="@+id/imgViewAtras2"
+        android:id="@+id/imgViewSig"
         android:layout_width="65dp"
         android:layout_height="65dp"
         android:layout_marginTop="24dp"
@@ -133,7 +147,7 @@
         app:srcCompat="@drawable/btnsig" />
 
     <ImageView
-        android:id="@+id/imageView7"
+        android:id="@+id/imgViewRandom"
         android:layout_width="20dp"
         android:layout_height="20dp"
         android:layout_marginTop="48dp"
