--- a/app/src/main/res/layout/layout_rolas.xml
+++ b/app/src/main/res/layout/layout_rolas.xml
@@ -3,12 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginTop="5dp"
     android:orientation="horizontal">
 
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="127dp"
         android:layout_height="144dp"
+        android:layout_marginLeft="10dp"
         app:srcCompat="@mipmap/ic_launcher_round" />
 
     <LinearLayout
@@ -19,13 +21,21 @@
         <TextView
             android:id="@+id/tvNombre"
             android:layout_width="match_parent"
-            android:layout_height="72dp"
-            android:text="Nombre" />
+            android:layout_height="70dp"
+            android:fontFamily="@font/montserrat"
+            android:gravity="center"
+            android:text="Nombre"
+            android:textColor="#E6FFFFFF"
+            android:textSize="24sp" />
 
         <TextView
             android:id="@+id/tvAutor"
             android:layout_width="match_parent"
-            android:layout_height="69dp"
-            android:text="Autor" />
+            android:layout_height="70dp"
+            android:fontFamily="@font/montserrat"
+            android:gravity="center"
+            android:text="Autor"
+            android:textColor="#E6FFFFFF"
+            android:textSize="24sp" />
     </LinearLayout>
 </LinearLayout>
