--- a/app/src/main/res/layout/activity_reproductor.xml
+++ b/app/src/main/res/layout/activity_reproductor.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/fondo"
     android:orientation="vertical"
+    android:background="@drawable/fondo"
     tools:context=".Reproductor">
 
     <TextView
@@ -19,7 +19,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="380dp"
@@ -106,11 +105,11 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtViewTiempoInicio"
         android:alpha="0"
-        android:onClick=""
+        android:onClick="tate"
         app:srcCompat="@drawable/btnpausa" />
 
     <ImageView
-        android:id="@+id/imgViewPlay"
+        android:id="@+id/imgStart"
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:layout_marginTop="20dp"
@@ -128,7 +127,7 @@
         android:layout_marginStart="64dp"
         android:layout_marginTop="24dp"
         android:onClick="anterior"
-        app:layout_constraintEnd_toStartOf="@+id/imgViewPlay"
+        app:layout_constraintEnd_toStartOf="@+id/imgStart"
         app:layout_constraintHorizontal_bias="0.554"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtViewTiempoInicio"
@@ -142,7 +141,7 @@
         android:layout_marginEnd="64dp"
         android:onClick="siguiente"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imgViewPlay"
+        app:layout_constraintStart_toEndOf="@+id/imgStart"
         app:layout_constraintTop_toBottomOf="@+id/txtViewTiempoFin"
         app:srcCompat="@drawable/btnsig" />
 
