Commit del random con animación lista

--- a/app/src/main/res/layout/activity_reproductor.xml
+++ b/app/src/main/res/layout/activity_reproductor.xml
@@ -158,6 +158,18 @@
         app:srcCompat="@drawable/btnrandom" />
 
     <ImageView
+        android:id="@+id/imgViewRandomVerde"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="48dp"
+        android:alpha="0"
+        app:layout_constraintEnd_toStartOf="@+id/imgViewAtras"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtViewTiempoInicio"
+        app:srcCompat="@drawable/randomverde" />
+
+    <ImageView
         android:id="@+id/imageLista"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
