--- a/app/src/main/res/layout/activity_reproductor.xml
+++ b/app/src/main/res/layout/activity_reproductor.xml
@@ -21,8 +21,8 @@
         app:layout_constraintTop_toTopOf="parent" />
     <ImageView
         android:id="@+id/album"
-        android:layout_width="380dp"
-        android:layout_height="280dp"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
         android:layout_marginTop="16dp"
         android:adjustViewBounds="true"
         android:cropToPadding="false"
@@ -156,5 +156,18 @@
         app:layout_constraintTop_toBottomOf="@+id/txtViewTiempoInicio"
         android:onClick="setAleatorio"
         app:srcCompat="@drawable/btnrandom" />
+
+    <ImageView
+        android:id="@+id/imageLista"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/txtViewNowP"
+        app:layout_constraintHorizontal_bias="0.32"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:onClick="lista"
+        app:layout_constraintVertical_bias="0.022"
+        app:srcCompat="@drawable/list" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
